# RPG_project

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  Sources.txt  build.sh  export.sh
RPG/: CMakeLists.txt  clean.sh  coverage.sh  make.sh
RPG/shaders/: example_001.frag  example_002.frag
RPG/src/: game.cpp  game.hpp  main.cpp  main_bench.cpp  main_img_diff.cpp  main_virus.cpp  text.cpp  text.hpp  title.cpp  title.hpp  virus.cpp  virus.hpp
RPG/src/bench/: bench_digits_count.cpp  bench_isprime.cpp  bench_vector.cpp  bench_vector_copy.cpp  bench_vector_sort.cpp
RPG/src/entities/: boss.cpp  boss.hpp  entity.cpp  entity.hpp  people.cpp  people.hpp  player.cpp  player.hpp  pnj.cpp  pnj.hpp
RPG/src/items/: bow.cpp  bow.hpp  item.cpp  item.hpp  sword.cpp  sword.hpp  wand.cpp  wand.hpp  weapon.cpp  weapon.hpp
RPG/src/lib/convert_utils/: CMakeLists.txt  binary.cpp  binary.hpp  binary_imp.hpp  qt_utils.cpp  qt_utils.hpp  sfml_utils.cpp  sfml_utils.hpp
RPG/src/lib/cpu/: cpu.cpp  cpu.hpp
RPG/src/lib/libhello/: CMakeLists.txt
RPG/src/lib/math/: CMakeLists.txt  constant.hpp  count_digits.hpp  count_digits_imp.hpp  cylinder.hpp  cylinder_imp.hpp  getGravitationalAttraction.hpp  getGravitationalAttraction_imp.hpp  getSchwarzschild.hpp  getSchwarzschild_imp.hpp  pair.cpp  pair.hpp  power.c  power.h  power.hpp  power_imp.hpp  prime.cpp  prime.hpp  prime_imp.hpp  sphere.hpp  sphere_imp.hpp  square_root.cpp  square_root.hpp
RPG/src/lib/texture/: CMakeLists.txt  load_texture.cpp  load_texture.hpp  load_texturemap.cpp  load_texturemap.hpp
RPG/src/lib/thread/: Pool.hpp  ThreadPool.h
RPG/src/lib/time/chrono/: chrono.cpp  chrono.hpp
RPG/src/lib/time/date/: date.cpp  date.hpp
RPG/src/lib/utils/: CMakeLists.txt
RPG/src/lib/utils/date/: date.cpp
RPG/src/lib/utils/opencv/: opencv_utils.cpp  opencv_utils.hpp
RPG/src/lib/utils/opengl/: screen_save.cpp
RPG/src/lib/vector/: CMakeLists.txt  vector.cpp  vector.hpp  vector_avx.cpp  vector_avx.hpp  vector_imp.hpp
RPG/src/test/math/: test_cylinder.cpp  test_getGravitationalAttraction.cpp  test_getSchwarzschild.cpp  test_power.cpp  test_sphere.cpp
RPG/src/test/vector/: test_vector_copy.cpp  test_vector_sort.cpp
RPG/texture_map/: texture_map_0.csv
RPG/title_map/: title_map_0.txt  title_map_1.txt
cmake/: dev-mode.cmake  install-config.cmake  install-rules.cmake  variables.cmake
config_docker/: Dockerfile_archlinux  Dockerfile_fedora  Dockerfile_manjaro  Dockerfile_ubuntu
source/: lib.cpp
test/: CMakeLists.txt
test/source/: RPG_test.cpp
tools/: graph.py  log2.csv
